--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             <td>⚝⚝⚝⚝⚝</td>
           </tr>
         </table>
-
+<a href="hobbies.html">My Hobbies</a><br />
+  <a href="Contacts.html">Contacts</a>
 
 </body>
 
